# news_summarizer

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/news_summarizer/: localize.py  models.py  report.py  rss.py  summarizer.py  utils.py
src/news_summarizer/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py
